2014-08-01  Paolo Carlini  <paolo.carlini@oracle.com>

	DR 217 again
	* g++.dg/tc1/dr217-2.C: New.

2014-08-01  Igor Zamyatin  <igor.zamyatin@intel.com>

	PR other/61963
	* c-c++-common/cilk-plus/AN/pr61963.c: New test.

2014-07-08  Igor Zamyatin  <igor.zamyatin@intel.com>

	PR middle-end/61455
	* c-c++-common/cilk-plus/AN/pr61455.c: New test.
	* c-c++-common/cilk-plus/AN/pr61455-2.c: Likewise.

2014-08-01  Jiong Wang  <jiong.wang@arm.com>

	* gcc.target/aarch64/legitimize_stack_var_before_reload_1.c: New
	testcase.

2014-08-01  Richard Biener  <rguenther@suse.de>

	PR middle-end/61762
	* gcc.dg/pr61762.c: Align the string to make the testcase work
	on strict-align targets.

2014-08-01  Jakub Jelinek  <jakub@redhat.com>

	* c-c++-common/ubsan/align-1.c: New test.
	* c-c++-common/ubsan/align-2.c: New test.
	* c-c++-common/ubsan/align-3.c: New test.
	* c-c++-common/ubsan/align-4.c: New test.
	* c-c++-common/ubsan/align-5.c: New test.
	* c-c++-common/ubsan/attrib-4.c: New test.
	* g++.dg/ubsan/align-1.C: New test.
	* g++.dg/ubsan/align-2.C: New test.
	* g++.dg/ubsan/align-3.C: New test.
	* g++.dg/ubsan/attrib-1.C: New test.
	* g++.dg/ubsan/null-1.C: New test.
	* g++.dg/ubsan/null-2.C: New test.

2014-08-01  Tom de Vries  <tom@codesourcery.com>

	* lib/target-supports.exp (check_effective_target_glibc)
	(check_effective_target_glibc_2_12_or_later)
	(check_effective_target_not_glibc_2_11_or_earlier): New proc.
	* gcc.dg/cproj-fails-with-broken-glibc.c: Require effective target
	not_glibc_2_11_or_earlier.

2014-07-31  Tom de Vries  <tom@codesourcery.com>

	* gcc.dg/pr51879-7.c: Remove superfluous declaration of bar.

2014-07-31  James Greenhalgh  <james.greenhalgh@arm.com>

	* gcc.target/aarch64/scalar_intrinsics.c (test_vpaddd_f64): New.
	(test_vpaddd_s64): Likewise.
	(test_vpaddd_s64): Likewise.
	* gcc.target/aarch64/simd/vpaddd_f64: New.
	* gcc.target/aarch64/simd/vpaddd_s64: New.
	* gcc.target/aarch64/simd/vpaddd_u64: New.
